[gd_scene load_steps=8 format=2]

[ext_resource path="res://GUI/start_game/sprites/start_game_continue_button_unclicked.png" type="Texture" id=1]
[ext_resource path="res://GUI/start_game/sprites/start_game_new_game_button_unclicked.png" type="Texture" id=2]
[ext_resource path="res://GUI/start_game/sprites/start_game_title.png" type="Texture" id=4]
[ext_resource path="res://GUI/start_game/sprites/start_game_options_button_unclicked.png" type="Texture" id=5]
[ext_resource path="res://GUI/start_game/start_game.gd" type="Script" id=6]
[ext_resource path="res://GUI/start_game/sprites/start_game_background.png" type="Texture" id=7]
[ext_resource path="res://GUI/start_game/sprites/start_game_quit_button_unclicked.png" type="Texture" id=8]

[node name="start_game" type="CanvasLayer"]
script = ExtResource( 6 )

[node name="menu" type="Control" parent="."]
margin_left = 312.0
margin_top = 296.0
margin_right = 1673.0
margin_bottom = 1337.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menu_bg" type="TextureRect" parent="menu"]
margin_left = 327.862
margin_top = 344.794
margin_right = 916.862
margin_bottom = 882.794
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="VBoxContainer" parent="menu/menu_bg"]
margin_left = 98.0
margin_top = 19.0
margin_right = 483.0
margin_bottom = 536.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="continue" type="TextureButton" parent="menu/menu_bg/HBoxContainer"]
margin_right = 385.0
margin_bottom = 104.0
texture_normal = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="menu/menu_bg/HBoxContainer"]
margin_top = 108.0
margin_right = 385.0
margin_bottom = 128.0
rect_min_size = Vector2( 100, 20 )

[node name="new_game" type="TextureButton" parent="menu/menu_bg/HBoxContainer"]
margin_top = 132.0
margin_right = 385.0
margin_bottom = 236.0
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="menu/menu_bg/HBoxContainer"]
margin_top = 240.0
margin_right = 385.0
margin_bottom = 260.0
rect_min_size = Vector2( 100, 20 )

[node name="option" type="TextureButton" parent="menu/menu_bg/HBoxContainer"]
margin_top = 264.0
margin_right = 385.0
margin_bottom = 368.0
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer3" type="MarginContainer" parent="menu/menu_bg/HBoxContainer"]
margin_top = 372.0
margin_right = 385.0
margin_bottom = 392.0
rect_min_size = Vector2( 100, 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quit" type="TextureButton" parent="menu/menu_bg/HBoxContainer"]
margin_top = 396.0
margin_right = 385.0
margin_bottom = 500.0
texture_normal = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="TextureRect" parent="."]
margin_left = 312.0
margin_top = 296.0
margin_right = 1542.0
margin_bottom = 561.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="menu/menu_bg/HBoxContainer/continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="menu/menu_bg/HBoxContainer/new_game" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="menu/menu_bg/HBoxContainer/option" to="." method="_on_option_pressed"]
[connection signal="pressed" from="menu/menu_bg/HBoxContainer/quit" to="." method="_on_quit_pressed"]
